# nanoskills

./: .agent-skills.yaml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_zh.md
.github/workflows/: release.yml
docs/: main.md  positioning.md  runtime-integration.md  script-skillization.md  skills-packaging.md  需求修改.md
docs111/: 自分发.md
locales/: en.yml  zh-CN.yml
skills/: project_builder_skill.md
skills/nanoskills_builder/: SKILL.md
skills/nanoskills_usage_guide/: nanoskills_usage_guide.md
skills/nanoskills_usager/: SKILL.md
skills/skillscripts_builder/: SKILL.md
skills/skillscripts_usager/: SKILL.md
src/: cli.rs  cmd_sync.rs  config.rs  index.rs  main.rs  models.rs  parser.rs  path_utils.rs  scanner.rs  ui.rs
src/app/: config_service.rs  engine.rs  index_service.rs  mod.rs  search.rs
src/app/sync/: builder.rs  entry.rs  result.rs  tool_name_resolver.rs
src/cli/: cli.rs  mod.rs  picker.rs
src/cli/commands/: config.rs  init.rs  list.rs  mod.rs  pick.rs  search.rs  shared.rs  sync.rs
src/cli/output/: mod.rs  serialize.rs  table.rs
src/domain/: agent.rs  config.rs  index.rs  mod.rs  skill.rs  tool_name.rs
src/infra/: config_loader.rs  index_store.rs  mod.rs  parser.rs  scanner.rs
src/io/: config_loader.rs  index_store.rs  mod.rs  parser.rs  path_utils.rs  scanner.rs
src/model/: config.rs  index.rs  json_view.rs  mod.rs  skill.rs
src/presentation/: cli.rs  mod.rs
src/presentation/commands/: config.rs  init.rs  list.rs  mod.rs  pick.rs  search.rs  shared.rs  sync.rs
src/presentation/output/: highlight.rs  mod.rs  table.rs
src/presentation/tui/: highlight.rs  hit_test.rs  mod.rs  render.rs  state.rs  view_model.rs
src/services/: config_service.rs  engine.rs  index_service.rs  mod.rs  search.rs
src/services/sync/: builder.rs  entry.rs  mod.rs  result.rs  tool_name_resolver.rs
test_scripts/: asm_skill.asm  batch_skill.bat  c_skill.c  julia_skill.jl  latex_skill.tex  lisp_skill.lisp  lua_skill.lua  markdown_skill.md  pascal_skill.pas  r_skill.R  scheme_skill.scm  shell_skill.sh  vim_skill.vim
tests/: cli_config_resolution_test.rs  cli_config_show_test.rs  cli_index_fallback_test.rs  cli_init_test.rs  cli_list_test.rs  cli_search_test.rs  cli_sync_test.rs  cli_sync_tool_name_test.rs
tests/common/: mod.rs
tests/scripts/: cpp_skill.cpp  demo_skill.py  erlang_skill.erl  fortran_skill.f90  go_skill.go  haskell_skill.hs  js_skill.js  matlab_skill.m  ocaml_skill.ml  perl_skill.pl  powershell_skill.ps1  ruby_skill.rb  rust_skill.rs  sql_skill.sql
