[package]
name = "nanoskills"
version = "1.0.0"
edition = "2024"
description = "Zero-config local skill indexing and search CLI for AI Agents"
license = "MIT"
repository = "https://github.com/gtiders/nanoskills"
readme = "README.md"
keywords = ["agent", "cli", "search", "index", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
comfy-table = "7.1.4"
crossterm = "0.29.0"
dirs = "6.0.0"
dunce = "1.0.5"
fuzzy-matcher = "0.3.7"
ignore = "0.4.25"
inquire = "0.9.4"
path-clean = "1.0.0"
ratatui = "0.29.0"
rayon = "1.10.0"
rust-i18n = "3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
syntect = "5.2.0"
sys-locale = "0.3"
termion = "4.0.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.20.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
