[package]
name = "nanoskills"
version = "1.0.2"
edition = "2024"
description = "Zero-config local skill indexing and search CLI for AI Agents"
license = "MIT"
repository = "https://github.com/gtiders/nanoskills"
readme = "README.md"
keywords = ["agent", "cli", "search", "index", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
comfy-table = "7.2.2"
crossterm = "0.29.0"
dirs = "6.0.0"
dunce = "1.0.5"
fuzzy-matcher = "0.3.7"
ignore = "0.4.25"
path-clean = "1.0.1"
ratatui = "0.30.0"
rayon = "1.11.0"
rust-i18n = "3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
sys-locale = "0.3"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
# panic = "abort"
strip = true
